# pure-state

./: CHANGELOG.md  default.nix  pure-state.cabal
src/Pure/: State.hs
