name:                pure-state
version:             0.8.0.0
synopsis:            A stateful View monad.
homepage:            purehs.org/doc/pure-state
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-state.git

library
  exposed-modules: Pure.State
  build-depends:       base,
                       pure-core,
                       pure-default,
                       pure-dom,
                       pure-lifted,
                       exceptions,
                       mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
